infra/production/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    service.beta.kubernetes.io/do-loadbalancer-protocol: "https"
    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
    service.beta.kubernetes.io/do-loadbalancer-hostname: "www.tazaker.org"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - www.tazaker.org
        - tazaker.org
      secretName: echo-tls
  ingressClassName: nginx
  rules:
    - host: www.tazaker.org
      http:
        paths:
          - path: /api/(auth|users|onboarding)/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: identity-srv
                port:
                  number: 3000
    - host: www.tazaker.org
      http:
        paths:
          - path: /api/events/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: events-srv
                port:
                  number: 3000
    - host: www.tazaker.org
      http:
        paths:
          - path: /api/tickets/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tickets-srv
                port:
                  number: 3000
    - host: www.tazaker.org
      http:
        paths:
          - path: /api/orders/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: orders-srv
                port:
                  number: 3000
    - host: www.tazaker.org
      http:
        paths:
          - path: /api/payments/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payments-srv
                port:
                  number: 3000
    - host: www.tazaker.org
      http:
        paths:
          - path: /v1/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-v1-srv
                port:
                  number: 3000
    - host: www.tazaker.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-srv
                port:
                  number: 3000
